--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,5 +1,6 @@
 {
   "repositoryUrl": "https://github.com/BrightNight-Energy/ts-ecma-import-codmod",
+  "branches": ["get-cicd-running"],
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
