--- a/biome.json
+++ b/biome.json
@@ -7,9 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [
-      "package.json"
-    ]
+    "ignore": ["package.json"]
   },
   "formatter": {
     "enabled": true,
@@ -25,7 +23,6 @@
       "recommended": true,
       "suspicious": {
         "noThenProperty": "off",
-        "noConsole": "error",
         "noEmptyBlockStatements": "error",
         "noEvolvingTypes": "error"
       },
