--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "ts-import-codemod",
+  "name": "@brightnightpower/ts-codemod",
   "version": "1.3.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "A codemod tool to transform imports in Typescript",
   "keywords": [
     "codemod",
     "typescript",
-    "ecma"
+    "ecma",
+    "react-query-v5",
+    "migrate"
   ],
   "license": "ISC",
   "author": "",
   "type": "module",
   "main": "src/index.js",
   "bin": {
-    "ts-import-codemod": "./dist/src/index.js"
+    "ts-codemod": "./dist/src/index.js"
   },
   "dependencies": {
     "commander": "^13.1.0",
